--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -62,7 +62,7 @@
         
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -97,7 +97,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="#">Ricardo Bertony</a> para o CursoEmVideo</p>
+        <p>Site criado por <a href="https://github.com/Ricardo-Bertony">Ricardo Bertony</a> para o CursoEmVideo</p>
     </footer>
 
 </body>
